unpackaged/main/default/objects/Product__c/fields/Descrip_tion__c.field-meta.xml
<CustomField>
    <fullName>Descrip_tion__c</fullName>
    <label>Descrip[tion</label>
    <type>TextArea</type>
</CustomField>